# pycct

./: README.md  commands.py  pixi.toml  pyproject.toml  pyserial_client.py  spectrometer.py
src/pycct/: __init__.py  commands.py  pyserial_client.py  spectrometer.py
