[project]
name = "pycct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tdinapoli", email = "tomas.dina98@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pycct = "pycct:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
